[package]

name = "almost-pong"
version = "0.0.0"
authors = ["gmorenz <morenzg@gmail.com>"]

[[bin]]
name = "pong"
path = "src/main.rs"

[dependencies.graphics]

git = "https://github.com/pistondevelopers/rust-graphics"

[dependencies.piston]

git = "file:///home/normal/side/rust/piston/workspace/piston"

[dependencies.sdl2_game_window]

git = "file:///home/normal/side/rust/piston/workspace/sdl2_game_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"